tests/negative/neg_own_source_maybe_null.safe
-- Test: neg_own_source_maybe_null
-- Description: Moving from a source that is not provably non-null.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: REJECT move_source_not_nonnull

package move_source_maybe_null_test

   type payload is range 0 to 10;
   type payload_ptr is access payload;

   function bad_move
      Source : payload_ptr = null;
      Target : payload_ptr = null;

      Target = Source;  -- ERROR: source is not provably non-null



